mongo-stack.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template: # pod template
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:3.6.23
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db # mongo default storage path
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
      volumes:
        - name: mongo-persistent-storage
          # pointer to implementation of volume
          persistentVolumeClaim:
            claimName: mongo-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: fleetman-mongodb
spec:
  selector:
    app: mongodb
  ports:
    - name: mongoport
      port: 27017
  type: ClusterIP
