service.yml
### Project Services ###
########################

# Web App Service
apiVersion: v1
kind: Service
metadata:
    name: fleetman-webapp # this name is used when making network calls

spec:
    selector:
        app: webapp

    ports:
        - name: http
          port: 80 # external port
          nodePort: 31080 # publicly accessible on this port

    type: NodePort
    # type: LoadBalancer

---
# Queue Service
apiVersion: v1
kind: Service
metadata:
    name: fleetman-queue

spec:
    selector:
        app: queue

    ports:
        - name: http
          port: 8161
        #   nodePort: 30010

        - name: endpoint
          port: 61616

    # type: NodePort
    type: ClusterIP

---
# Position Tracker Service
apiVersion: v1
kind: Service
metadata:
    name: fleetman-position-tracker

spec:
    selector:
        app: position-tracker

    ports:
        - name: http
          port: 8080

    type: ClusterIP

---
# Api Gateway Service
apiVersion: v1
kind: Service
metadata:
    name: fleetman-api-gateway

spec:
    selector:
        app: api-gateway

    ports:
        - name: http
          port: 8080

    type: ClusterIP
